fix(lang-java): address DM_BOOLEAN_CTOR